# Team1_GTGH_project

./: .dockerignore  .gitignore  databricks.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Docker/: Dockerfile  config.yaml  docker-compose.yml
Golden_dataset/: gold_dataset.jsonl
JSON_LOGS/: document_mapper.json
Vector DB Folder/07ee8404-9950-4681-94a4-86b4f869330f/: index_metadata.pickle
Vector DB Folder/7257c009-071d-4639-a8f5-d368d8c0970c/: index_metadata.pickle
data/eval_outputs/: results.csv  results.json  summary.json
src/gtgh_project/: __init__.py  config.py  create_vector_store.py  main.py  test_embeding.py
src/gtgh_project/API/: index.html  rag_api.py
src/gtgh_project/Azure_DB/: azure_vector_storage.py
src/gtgh_project/ChromaDB/: vector_store.py
src/gtgh_project/Downloaders/: EurLex_Downloader.py
src/gtgh_project/Ingestion/: ingest.py
src/gtgh_project/LLMs/: llm_as_judge.py  llm_factory.py  rag_chain.py  retriever.py  system_prompt.py
src/gtgh_project/RAGPipeline/: rag.py
src/gtgh_project/Splitters/: html_splitter.py  pdf_splitter.py  splitter.py  splitter_factory.py  text_splitter.py
src/gtgh_project/Vectorization/: embeddings.py
