[project]
name = "gtgh-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dimitris Onute", email = "dimitrisonute@gmail.com" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
]

[project.scripts]
gtgh-project = "gtgh_project:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
